Improved code generation script